--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -76,7 +76,7 @@
                         <td class="py-2">{{booking.firstName}}, {{booking.lastName}}</td>
                         <td class="py-2">{{booking.phone}}</td>
                         <td class="py-2">{{booking.trip?.tripDate }}</td>
-                        <td class="py-2">{{booking.trip?.route}}<span *ngIf="booking.returnTrip" >| {{booking.returnTrip}} </span></td>
+                        <td class="py-2">{{trip.route}}<span *ngIf="booking.returnTrip" >| {{booking.returnTrip}} </span></td>
                         <td class="py-2">{{booking.tripAmount + booking.returnAmount }}</td>
                         <td class="py-2">{{booking.tripSeat}} <span *ngIf="booking.returnSeat" >| {{booking.returnSeat }} </span></td>
                         <td class="py-2">{{booking.mode}}: {{booking.paystack_ref }}</td>
