--- a/src/app/trips/trips.component.html
+++ b/src/app/trips/trips.component.html
@@ -116,7 +116,7 @@
                                         <a href="javascript:void(0)" (click)="displayTrip = true; populateTrip(trip)" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Edit</a>
                                     </li>
                                     <li>
-                                        <a href="javascript:void(0)" (click)="displayTrip = true; populateTrip(trip)" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">View Bookings</a>
+                                        <a href="javascript:void(0)" (click)="displayTripManifest = true; pullTripsManifest(trip._id)" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">View Manifest</a>
                                     </li>
                                     <li>
                                         <a href="javascript:void(0)" (click)=" markAsCompleted()" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mark trip as completed</a>
