--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -29,7 +29,7 @@
                     <span class="dark:text-white"> {{bookings.length}}</span>
                 </h5>
 
-                <button state="button"
+                <button (click)="exportToExcel(bookings, 'bookings')"
                     class="flex items-center justify-center flex-shrink-0 px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg focus:outline-none hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
                     <svg class="w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24"
                         stroke-width="2" stroke="currentColor" aria-hidden="true">
@@ -63,10 +63,11 @@
                         <th pSortableColumn="firstName" style="width:12%">Name <p-sortIcon
                                 field="firstName"></p-sortIcon></th>
                         <th pSortableColumn="phone" style="width:10%">Phone <p-sortIcon field="phone"></p-sortIcon></th>
+                        <th pSortableColumn="state" style="width:18%">Trip Route <p-sortIcon field="state"></p-sortIcon>
+                        <th pSortableColumn="state" style="width:18%">Trip Bus <p-sortIcon field="state"></p-sortIcon>
+                        </th>
                         <th pSortableColumn="state" style="width:18%">Travel Date <p-sortIcon
                                 field="state"></p-sortIcon></th>
-                        <th pSortableColumn="state" style="width:18%">Trip Route <p-sortIcon field="state"></p-sortIcon>
-                        </th>
                         <th pSortableColumn="state" style="width:5%">Amount <p-sortIcon field="state"></p-sortIcon></th>
                         <th pSortableColumn="state" style="width:10%">Seat No. <p-sortIcon field="state"></p-sortIcon>
                         </th>
@@ -85,8 +86,9 @@
                         <td class="py-2">{{booking.bookingId}}</td>
                         <td class="py-2">{{booking.firstName}}, {{booking.lastName}}</td>
                         <td class="py-2">{{booking.phone}}</td>
-                        <td class="py-2">{{booking.trip?.tripDate }} {{booking.trip?.time }}</td>
                         <td class="py-2">{{booking.trip?.title }}</td>
+                        <td class="py-2">{{booking.trip?.bus }}</td>
+                        <td class="py-2">{{booking.trip?.tripDate }} {{booking.trip?.time }}</td>
                         <td class="py-2">{{booking.tripAmount + booking.returnAmount }}</td>
                         <td class="py-2">{{booking.tripSeat}} <span *ngIf="booking.returnSeat">| {{booking.returnSeat }}
                             </span></td>
