--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -60,16 +60,16 @@
                     <tr>
                         <th pSortableColumn="firstName" style="width:10%">BookingId <p-sortIcon
                                 field="firstName"></p-sortIcon></th>
-                        <th pSortableColumn="firstName" style="width:12%">Name <p-sortIcon
+                        <th pSortableColumn="firstName" style="width:10%">Name <p-sortIcon
                                 field="firstName"></p-sortIcon></th>
-                        <th pSortableColumn="phone" style="width:10%">Phone <p-sortIcon field="phone"></p-sortIcon></th>
-                        <th pSortableColumn="state" style="width:18%">Trip Route <p-sortIcon field="state"></p-sortIcon>
-                        <th pSortableColumn="state" style="width:18%">Trip Bus <p-sortIcon field="state"></p-sortIcon>
+                        <th pSortableColumn="phone" style="width:8%">Phone <p-sortIcon field="phone"></p-sortIcon></th>
+                        <th pSortableColumn="state" style="width:13%">Trip Route <p-sortIcon field="state"></p-sortIcon>
+                        <th pSortableColumn="state" style="width:13%">Bus Type <p-sortIcon field="state"></p-sortIcon>
                         </th>
-                        <th pSortableColumn="state" style="width:18%">Travel Date <p-sortIcon
+                        <th pSortableColumn="state" style="width:13%">Travel Date <p-sortIcon
                                 field="state"></p-sortIcon></th>
                         <th pSortableColumn="state" style="width:5%">Amount <p-sortIcon field="state"></p-sortIcon></th>
-                        <th pSortableColumn="state" style="width:10%">Seat No. <p-sortIcon field="state"></p-sortIcon>
+                        <th pSortableColumn="state" style="width:7%">Seat No. <p-sortIcon field="state"></p-sortIcon>
                         </th>
                         <th pSortableColumn="state" style="width:10%">Payment ref <p-sortIcon
                                 field="state"></p-sortIcon></th>
