--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -75,9 +75,9 @@
                                 field="state"></p-sortIcon></th>
                         <th pSortableColumn="status" style="width:5%">Status <p-sortIcon field="status"></p-sortIcon>
                         </th>
-                        <th pSortableColumn="createdAt" style="width:5%">Created on <p-sortIcon
+                        <th pSortableColumn="createdAt" style="width:5%">Booking Date <p-sortIcon
                                 field="createdAt"></p-sortIcon></th>
-                        <th style="width:5%">Actions</th>
+                        <th style="width:3%"></th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-booking>
