--- a/src/app/trips/trips.component.html
+++ b/src/app/trips/trips.component.html
@@ -82,7 +82,7 @@
                                 field="firstName"></p-sortIcon></th>
                         <th pSortableColumn="firstName" style="width:15%">Route <p-sortIcon
                                 field="firstName"></p-sortIcon></th>
-                        <th pSortableColumn="firstName" style="width:10%">Driver <p-sortIcon
+                        <th pSortableColumn="firstName" style="width:10%">TO <p-sortIcon
                                 field="firstName"></p-sortIcon></th>
                                 <th pSortableColumn="firstName" style="width:10%">Assigned Bus <p-sortIcon
                                     field="firstName"></p-sortIcon></th>
