--- a/src/app/trips/trips.component.html
+++ b/src/app/trips/trips.component.html
@@ -278,9 +278,9 @@
                 class="p-error">Please select route </small> -->
 
             <span class="w-full mb-1 block mt-8">
-                <span class="block w-full mb-1"> Driver </span>
+                <span class="block w-full mb-1"> TO </span>
 
-                <p-dropdown [options]="drivers" optionValue="_id" placeholder="Select a driver" formControlName="driver"
+                <p-dropdown [options]="drivers" optionValue="_id" placeholder="Select a TO" formControlName="driver"
                     [ngClass]="{ 'ng-invalid ng-dirty': submitted && f.driver.errors }"
                     styleClass="border w-full p-2 rounded" [style]="{width: '100%'}"
                     optionLabel="firstName"></p-dropdown>
