--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -115,7 +115,7 @@
                                                 class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">View
                                                 Booking</a>
                                         </li>
-                                        <li *ngIf="booking.status != 'Used'">
+                                        <!-- <li *ngIf="booking.status != 'Used'">
                                             <a href="javascript:void(0)" (click)="markAsUsed(booking, 'Used')"
                                                 class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Marked
                                                 as used</a>
@@ -124,7 +124,7 @@
                                             <a href="javascript:void(0)" (click)="markAsUsed(booking, 'Pending')"
                                                 class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Marked
                                                 as unused</a>
-                                        </li>
+                                        </li> -->
                                         <li>
                                             <a href="#"
                                                 class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Edit</a>
