--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -353,10 +353,10 @@
                         <table>
                             <tr>
                                 <td class="title">
-
+    
                                     <img src="assets/img/logo.png" style="width: 100%; max-width: 300px" />
                                 </td>
-
+    
                                 <td>
                                     #Ticket ID: {{bookingInfo?.uniqueBookingId}}<br />
                                     Departure Date: {{bookingInfo?.trip?.tripDate}}<br />
@@ -367,7 +367,7 @@
                         </table>
                     </td>
                 </tr>
-
+    
                 <tr class="information">
                     <td colspan="2">
                         <table>
@@ -377,7 +377,7 @@
                                     Suite 15 Victoria Atorough<br />
                                     Tyough Complex, Wurukum, Makurdi
                                 </td>
-
+    
                                 <td>
                                     <p><strong>Terminal:
                                         </strong>.<br />
@@ -388,17 +388,17 @@
                         </table>
                     </td>
                 </tr>
-
+    
                 <tr class="heading">
                     <td width="44%">TRAVELLER'S INFORMATION</td>
-
+    
                     <td width="56%">&nbsp;</td>
                 </tr>
-
+    
                 <tr class="border-b border-gray-100">
                     <td colspan="2">
                         <div class="mb-2 grid grid-cols-2 lg:grid-cols-2">
-
+    
                             <p class="">First name: <strong>{{bookingInfo?.firstName}}</strong></p>
                             <!-- <p class="">Middle Name: <strong>{{bookingInfo?.middleName}}</strong></p> -->
                             <p class="">Last Name: <strong>{{bookingInfo?.lastName}}</strong></p>
@@ -408,7 +408,7 @@
                 <tr class="border-b border-gray-100">
                     <td colspan="2">
                         <div class="mb-2 grid grid-cols-2 lg:grid-cols-2">
-
+    
                             <p class="">Phone: <strong>{{bookingInfo?.phone}}</strong></p>
                             <p class="">Email: <strong>{{bookingInfo?.email}}</strong></p>
                         </div>
@@ -417,7 +417,7 @@
                 <tr class="border-b border-gray-100 mb-4">
                     <td colspan="2">
                         <div class="mb-2 grid grid-cols-2 lg:grid-cols-2">
-
+    
                             <p class="">Gender: <strong>{{bookingInfo?.gender}}</strong></p>
                             <p class="">Date of Birth: <strong>{{bookingInfo?.dob | date: 'dd/MM/yyyy'}}</strong></p>
                         </div>
@@ -431,11 +431,11 @@
                     <td>EMERGENCY CONTACT</td>
                     <td>&nbsp;</td>
                 </tr>
-
+    
                 <tr class="border-b border-gray-100">
                     <td colspan="2">
                         <div class="mb-2 grid grid-cols-2 lg:grid-cols-2">
-
+    
                             <p class="">First name: <strong>{{bookingInfo?.emergencyFirstName}}</strong></p>
                             <!-- <p class="">Middle Name: <strong>{{bookingInfo?.middleName}}</strong></p> -->
                             <p class="">Last Name: <strong>{{bookingInfo?.emergencyLastName}}</strong></p>
@@ -445,13 +445,13 @@
                 <tr class="border-b border-gray-100">
                     <td colspan="2">
                         <div class="mb-2 grid grid-cols-2 lg:grid-cols-2">
-
+    
                             <p class="">Phone: <strong>{{bookingInfo?.emergencyPhone}}</strong></p>
                             <p class="">Email: <strong>{{bookingInfo?.emergencyEmail}}</strong></p>
                         </div>
                     </td>
                 </tr>
-
+    
                 <tr class="item">
                     <td></td>
                     <td>&nbsp;</td>
@@ -463,11 +463,11 @@
                 <tr class="border-b border-gray-100">
                     <td colspan="2">
                         <div class="mb-2 grid grid-cols-2 lg:grid-cols-2">
-
+    
                             <p class=""> Trip Route: <strong>{{bookingInfo?.trip?.title}}</strong></p>
                             <p class=""> Trip Date: <strong>{{bookingInfo?.trip?.tripDate}}
                                     {{bookingInfo?.trip?.time}}</strong></p>
-
+    
                             <!-- <td class="">Vehicle Type <strong>{{bookingInfo?.email}}</strong></td> -->
                         </div>
                     </td>
@@ -476,21 +476,21 @@
                     <td colspan="2">
                         <div class="mb-2 grid grid-cols-2 lg:grid-cols-2">
                             <p class="">Seat No: <strong>{{bookingInfo?.tripSeat}}</strong></p>
-
+    
                             <p class="">Amount Paid: <strong>₦{{bookingInfo?.tripAmount}}</strong></p>
                         </div>
                     </td>
                 </tr>
-
+    
                 <tr *ngIf="bookingInfo?.returnTrip" class="border-b border-gray-100">
                     <td colspan="2">
                         <div class="mb-2 grid grid-cols-2 lg:grid-cols-2">
-
+    
                             <p class="">Return Trip Route: <strong>{{bookingInfo?.returnTrip.title}}</strong></p>
                             <p class="">Return Trip Date: <strong>{{bookingInfo?.returnTrip.tripDate}}
                                     {{bookingInfo?.returnTrip.time}}</strong>
                             </p>
-
+    
                             <!-- <td class="">Vehicle Type <strong>{{bookingInfo?.email}}</strong></td> -->
                         </div>
                     </td>
@@ -499,12 +499,12 @@
                     <td colspan="2">
                         <div class="mb-2 grid grid-cols-2 lg:grid-cols-2">
                             <p class="">Seat No: <strong>{{bookingInfo?.returnSeat}}</strong></p>
-
+    
                             <p class="">Amount Paid: <strong>₦{{bookingInfo?.returnAmount}}</strong></p>
                         </div>
                     </td>
                 </tr>
-
+    
                 <tr class="item">
                     <td>&nbsp;</td>
                     <td>&nbsp;</td>
@@ -515,52 +515,50 @@
                 </tr>
                 <tr class="">
                     <td colspan="2">
-                        <p class="text-xs pt-0.5">1. Bus departs at scheduled time, but in cases where an emergency or
-                            unforeseen circumstances
-                            occurs (safety and security incident), please note that we are at liberty to alter
-                            the departure time.
-                        </p>
-                        <p class="text-xs pt-0.5">
-                            2. Travel is non-stop from departure bus station to arrival bus station. Stoppage only in
-                            emergency.</p>
-                        <p class="text-xs pt-0.5">
-                            3. Buses can also leave only when full; especially for walk-in buses.</p>
-                        <p class="text-xs pt-0.5">
-                            4. Bus stops at only the designated bus stations for security reasons.</p>
-                        <p class="text-xs pt-0.5">
-                            5. When you miss a bus (no show), we will issue you a new ticket at a discount rate of
-                            N4,000.
-                            Fees to
-                            reschedule your ticket before your bus departs: with more than 24hrs to departure N5000;
-                            with
-                            less than 24hrs to departure ₦4,000.</p>
-                        <p class="text-xs pt-0.5 pb-[5px]">
-                            6. There is no refund after ticket is booked. See full <a href="#"> terms and
-                                conditions
-                            </a> of carriage on our website.
-                        <p class="text-xs pt-0.5">
-                            7. Seats booked for luggage must be at the full adult fare for the trip. Fragile items
-                            such as
-                            electronics, laptops and other valuable items are not to be placed in the checke
-                            luggage but carried as hand luggage.
-                        </p>
-                        <p class="text-xs pt-0.5">
-                            8. All passengers will be allowed a total of 10kg free luggage allowance.
-                            (i)If the luggage weighs 10kg or less and the passenger is able to fit it under
-                            their seat or sit with it without inconveniencing passengers seated next to them, the
-                            luggage will be carried for free.
-                            (ii)If the luggage weighs above 10kg, a fee of N100 per kg will be charged
-                            for all kgs above 10kg to a maximum of 25kg per bag subject to availability of boot space.
-                        </p>
+                        <p class="text-xs pt-0.5">1. Bus departs at scheduled time, but in cases where an emergency or 
+                        unforeseen circumstances 
+                        occurs (safety and security incident), please note that we are at liberty to alter 
+                        the departure time.
+                      </p>
+                      <p class="text-xs pt-0.5">
+                          2. Travel is non-stop from departure bus station to arrival bus station. Stoppage only in emergency.</p>
+                      <p class="text-xs pt-0.5">
+                          3. Buses can also leave only when full; especially for walk-in buses.</p>
+                      <p class="text-xs pt-0.5">
+                          4.	Bus stops at only the designated bus stations for security reasons.</p>
+                      <p class="text-xs pt-0.5">
+                          5.	When you miss a bus (no show), we will issue you a new ticket at a discount rate of N4,000. 
+                          Fees to
+                          reschedule your ticket before your bus departs: with more than 24hrs to departure N5000;
+                          with
+                          less than 24hrs to departure ₦4,000.</p>
+                      <p class="text-xs pt-0.5 pb-[5px]">
+                          6. There is no refund after ticket is booked. See full <a href="#"> terms and
+                              conditions
+                          </a> of carriage on our website.
+                       <p class="text-xs pt-0.5">
+                          7. Seats booked for luggage must be at the full adult fare for the trip. Fragile items
+                          such as
+                          electronics, laptops and other valuable items are not to be placed in the checke
+                          luggage but carried as hand luggage.
+                          </p>
+                       <p class="text-xs pt-0.5">
+                          8. All passengers will be allowed a total of 10kg free luggage allowance.
+                          (i)If the luggage weighs 10kg or less and the passenger is able to fit it under
+                         their seat or sit with it without inconveniencing passengers seated next to them, the 
+                         luggage will be carried for free.
+                         (ii)If the luggage weighs above 10kg, a fee of N100 per kg will be charged 
+                         for all kgs above 10kg to a maximum of 25kg per bag subject to availability of boot space. 
+                          </p>
                         <h4 class="py-1">LIABILITY POLICY</h4>
                         <p class="text-xs pt-0.5">
-                            Except as provided in these Conditions, we shall not be liable to you or any third party
-                            for any loss, damage, liability, cost or expense suffered by you or any third party
-                            as a result of any alteration, cancellation or withdrawal of any Service by us,
-                            or any delay to any Service, or termination of any Service.
-                        </p>
-                        <p class="text-xs pt-0.5">
-                            Safe Travels</p>
+                          Except as provided in these Conditions, we shall not be liable to you or any third party
+                          for any loss, damage, liability, cost or expense suffered by you or any third party
+                          as a result of any alteration, cancellation or withdrawal of any Service by us, 
+                          or any delay to any Service, or termination of any Service.
+                          </p>
+                          <p class="text-xs pt-0.5">
+                          Safe Travels</p>
                     </td>
                 </tr>
             </table>
