--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -77,7 +77,7 @@
                         </th>
                         <th pSortableColumn="createdAt" style="width:5%">Booking Date <p-sortIcon
                                 field="createdAt"></p-sortIcon></th>
-                        <th style="width:3%"></th>
+                        <th style="width:3%">Action</th>
                     </tr>
                 </ng-template>
                 <ng-template pTemplate="body" let-booking>
