updated terminal details

--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -379,10 +379,10 @@
                                 </td>
     
                                 <td>
-                                    <p><strong>Terminal:
+                                    <p><strong>Terminals:
                                         </strong>.<br />
-                                        Abuja-Makurdi-Jos-Gboko<br />
-                                        Mararaba-Keffi.</p>
+                                        Abuja-Makurdi-Lokoja-Gboko<br />
+                                        Mararaba-Keffi-Lafia-Jos.</p>
                                 </td>
                             </tr>
                         </table>
