--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -15,9 +15,9 @@
                                         clip-rule="evenodd" />
                                 </svg>
                             </div>
-                            <input state="text" id="simple-search"
-                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
-                                placeholder="Search" required="">
+                            <input pInputText type="text" (input)="dt1.filterGlobal($event.target.value, 'contains')"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full pl-10 p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                            placeholder="Search" required="">
                         </div>
                     </form>
                 </div>
@@ -50,14 +50,16 @@
 
             </div>
         </div>
-        <div class="overflow-x-auto">
-            <p-table [value]="users"  [paginator]="true" [rows]="10" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true" [tableStyle]="{'min-width': '60rem'}">
+        <div class="overflow-x-auto"> 
+            <p-table [value]="users"  #dt1
+            [globalFilterFields]="['firstName', 'lastName', 'phone', 'state', 'userType','status']"  [paginator]="true" [rows]="10" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true" [tableStyle]="{'min-width': '60rem'}">
                 <ng-template pTemplate="header">
                     <tr>
                         <th pSortableColumn="firstName" style="width:15%">Name <p-sortIcon field="firstName"></p-sortIcon></th>
                         <!-- <th pSortableColumn="address" style="width:15%">Address <p-sortIcon field="address"></p-sortIcon></th> -->
                         <th pSortableColumn="phone" style="width:15%">Phone <p-sortIcon field="phone"></p-sortIcon></th>
                         <th pSortableColumn="state" style="width:10%">State <p-sortIcon field="state"></p-sortIcon></th>
+                        <th pSortableColumn="firstName" style="width:15%">Type <p-sortIcon field="firstName"></p-sortIcon></th>
                         <th pSortableColumn="status" style="width:10%">Status <p-sortIcon field="status"></p-sortIcon></th>
                         <th pSortableColumn="createdAt" style="width:15%">Creadted on <p-sortIcon field="createdAt"></p-sortIcon></th>
                         <th style="width:15%">Actions</th>
@@ -70,6 +72,7 @@
                         <!-- <td class="' py-2">{{user.address}}</td> -->
                         <td class="' py-2">{{user.phone}}</td>
                         <td class="' py-2">{{user.state}}</td>
+                        <td class="' py-2">{{user.type}}</td>
                         <td class="' py-2">{{user.status}}</td>
                         <td class="' py-2">{{user.createdAt | date: 'dd/MM/yyyy'}}</td>
                         <td>
