--- a/src/app/trips/trips.component.html
+++ b/src/app/trips/trips.component.html
@@ -76,7 +76,7 @@
                         </th>
                         <th pSortableColumn="firstName" style="width:15%">Title <p-sortIcon
                                 field="firstName"></p-sortIcon></th>
-                        <th pSortableColumn="firstName" style="width:10%">Date <p-sortIcon
+                        <th pSortableColumn="firstName" style="width:10%">Trip Date <p-sortIcon
                                 field="firstName"></p-sortIcon></th>
                         <th pSortableColumn="firstName" style="width:5%">Time <p-sortIcon
                                 field="firstName"></p-sortIcon></th>
