--- a/src/app/trips/trips.component.html
+++ b/src/app/trips/trips.component.html
@@ -90,7 +90,7 @@
                                 field="firstName"></p-sortIcon></th>
                         <th pSortableColumn="status" style="width:10%">Status <p-sortIcon field="status"></p-sortIcon>
                         </th>
-                        <th pSortableColumn="createdAt" style="width:10%">Creadted on <p-sortIcon
+                        <th pSortableColumn="createdAt" style="width:10%">Creadted On <p-sortIcon
                                 field="createdAt"></p-sortIcon></th>
                         <th style="width:10%">Actions</th>
                     </tr>
